Refactored IK panel

--- a/index.html
+++ b/index.html
@@ -107,14 +107,7 @@
               <span id="ik-toggle" class="collapse-toggle">▼</span>
             </h3>
             <div id="ik-content" class="collapsible-content">
-              <div class="ik-controls">
-                <button id="setup-ik-chains" class="ik-btn">🔗 Setup IK Chains</button>
-                <button id="clear-ik-chains" class="ik-btn">🗑️ Clear IK Chains</button>
-                <button id="test-ik" class="ik-btn">🧪 Test IK</button>
-              </div>
-              <div class="ik-chains-list" id="ik-chains-list">
-                <p class="no-chains">No IK chains created yet</p>
-              </div>
+              <!-- IK controls will be dynamically inserted here by IKControls component -->
             </div>
           </div>
           
