Refactored Undo/Redo controller

--- a/index.html
+++ b/index.html
@@ -117,15 +117,7 @@
               <span id="undo-redo-toggle" class="collapse-toggle">▼</span>
             </h3>
             <div id="undo-redo-content" class="collapsible-content">
-              <div class="undo-redo-buttons">
-                <button id="undo-btn" disabled>⟲ Undo</button>
-                <button id="redo-btn" disabled>⟳ Redo</button>
-              </div>
-              <div class="undo-redo-shortcuts">
-                <p><strong>Shortcuts:</strong></p>
-                <p>Ctrl+Z: Undo</p>
-                <p>Ctrl+Y: Redo</p>
-              </div>
+              <!-- Undo/Redo controls will be dynamically inserted here by UndoRedoControls component -->
             </div>
           </div>
         </div>
