Refactor debugging and modelmanagement

--- a/test-state-system.html
+++ b/test-state-system.html
@@ -259,7 +259,7 @@
             try {
                 const testState = {
                     timestamp: Date.now(),
-                    modelPath: 'womenfemale_body_base_rigged.glb',
+                    modelPath: 'woman.glb',
                     modelSettings: {
                         opacity: 0.8,
                         scale: 1.2,
