--- a/test-state.html
+++ b/test-state.html
@@ -175,7 +175,7 @@
                 const state = {
                     timestamp: new Date().toISOString(),
                     character: {
-                        modelPath: 'womenfemale_body_base_rigged.glb',
+                        modelPath: 'woman.glb',
                         scale: 1.0,
                         boneRotations: {
                             'mixamorig:Hips': { x: 0, y: 0, z: 0 },
